force-app/main/default/objects/GoogleDriveObjectSettings__mdt/GoogleDriveObjectSettings__mdt.object-meta.xml
<CustomObject>
    <label>Google Drive Object Settings</label>
    <pluralLabel>Google Drive objects settings</pluralLabel>
</CustomObject>