force-app/main/default/objects/GoogleDriveObjectSettings__mdt/fields/FieldAPI_NameWithFolderId__c.field-meta.xml
<CustomField>
    <fullName>FieldAPI_NameWithFolderId__c</fullName>
    <inlineHelpText>Specify the object&apos;s field name that will contain the id of the resulting google drive folder</inlineHelpText>
    <label>Field API Name with Folder Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>