force-app/main/default/objects/GoogleDriveObjectSettings__mdt/fields/FolderCreationField__c.field-meta.xml
<CustomField>
    <fullName>FolderCreationField__c</fullName>
    <inlineHelpText>API Name of the object to define the new google drive&apos;s folder name</inlineHelpText>
    <label>Folder Creation API Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>