force-app/main/default/objects/GoogleDriveObjectSettings__mdt/fields/ParentFolderId__c.field-meta.xml
<CustomField>
    <fullName>ParentFolderId__c</fullName>
    <inlineHelpText>Specify the google drive&apos;s folder id that will contain the new folders to be created</inlineHelpText>
    <label>Parent Folder Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>