force-app/main/default/objects/GoogleDriveObjectSettings__mdt/fields/Sobject__c.field-meta.xml
<CustomField>
    <fullName>Sobject__c</fullName>
    <label>Sobject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Google_Drive_objects_settings</relationshipLabel>
    <relationshipName>Google_Drive_objects_settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>